--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,14 @@ spring:
     url: jdbc:mysql://localhost:3306/thumb
     username: root
     password: root
+  data:
+    # Redis 配置
+    redis:
+      database: 0
+      host: 127.0.0.1
+      timeout: 5000
+      port: 6379
+
 # mybatis-plus
 mybatis-plus:
   configuration:
