使用布隆过滤器+冷热分离策略+value存储过期时间对点赞逻辑进行优化

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.2-jre</version> <!-- 可根据实际情况选择合适的版本 -->
+        </dependency>
 
 
         <dependency>
